Home section is complete

--- a/index.html
+++ b/index.html
@@ -29,8 +29,49 @@
 
         </nav>
 
+        <div id="showcase">
+
+            <div class="container">
+
+                <div class="content">
+
+                    <h1>Enjoy <span class="text-primary">Your</span> Stay</h1>
+                    <p class="lead">People do this so the truck will hit them and they can sue. It happened to my husband’s friend and he ended up flipping his truck trying to avoid hitting them;
+                        he’s ok, he got out with some bruises but otherwise unharmed and angry as fuck.
+                    </p>
+                    <a href="about.html" class="button">About Our Hotel</a>
+
+                </div>
+
+            </div>
+
+        </div>
+
 
     </header>
+
+    <section id="home-info" class="dark-background">
+
+        <div class="info-image">
+
+        </div>
+
+        <div class="info-content">
+            <h3>Our <span class="text-primary">Hotel's</span> Background</h3>
+            <p>
+                I was once in a group and this chick enters and starts talking LOUDLY on discord and dudes all drool over her. She then proceeds to say "oh haha yeah I am probably the only REAL female who games"
+                and everyone agreed with her. And I'm sitting there, staring at my boobs thinking "shit, that means I'm a dude. Who woulda thunk it". And I'm sure people are gonna say I'm jealous.
+                Hell no, I like my individuality. I very rarely use voice chat. I went a year in my WOW guild with people thinking I'm a guy because all my usernames or character names are gender neutral
+                AND I DON'T ACT LIKE A HORNY SCHOOL GIRL WHO JUST GOT HER FIRST DILDO. Dude, just act fucking normal. You're not special and you're just coming off as annoying, Put your tits away and play the game. And guys who find that attractive, y'all need to get laid or some shit.
+
+                NOTE: I am not saying ALL GIRLS WHO GAME suck. I'm referring to the basic bitch ones.
+            </p>
+
+            <a href="about.html" class="button button-light">LEARN MORE</a>
+
+        </div>
+
+    </section>
 
 </body>
 </html>
