About page is done

--- a/about.html
+++ b/about.html
@@ -2,12 +2,112 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About</title>
+    <meta name="description" content="Hotel Site - you're welcome!">
+    <meta name="keywords" content="hotel, city, stay, accommodation, lodging">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Hotel Site | About</title>
 </head>
 <body>
+
+
+    <header>
+
+        <nav>
+
+            <div class="container">
+                <h1 id="logo"><a href="index.html" class="logo">Hotel</a></h1>
+
+                <ul>
+                    <li><a href="index.html" class="nav-links">Home</a></li>
+                    <li><a href="about.html" class="nav-links current">About</a></li>
+                    <li><a href="contact.html" class="nav-links">Contact</a></li>
+                </ul>
+            </div>
+
+        </nav>
+
+    </header>
+
+    <section id="about-info" class="light-background padding-vertically-3">
+
+        <div class="container">
+
+            <div class="info-left">
+                <h1>About <span class="text-primary">Hotel</span></h1>
+                <p>
+                    With great effort, you still can install the program manually and your phone will start crashing and bugging out.
+
+                    Computers can have any mix of parts that may or may not work as intended by the developers, and be running drivers that may or may not be updated.
+
+                    Since there's no universal store to buy all your apps from (and probably shouldn't be) developers have to just take a guess at what their user will be installing software on,
+                    and hope that they actually read what was and wasn't compatible.
+
+                    Nobody does, and the list isn't complete, so you run into bugs.
+                </p>
+
+                <p>
+                    Uhhh, it seems like there may be some confusion. Either in my brain or yours but, your second example seems right to me. Apply a class, in CSS document give class style.
+                    In your first example, you have what seems to me 4 classes applied when all of that could've been done with one class.
+
+                    Edit: I've always been told, the less you put in your html, the better.
+                </p>
+
+            </div>
+
+            <div class="info-right">
+
+                <img src="./images/night%20view.jpg" alt="Night view">
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <div class="clearance">
+
+    </div>
+
+
+    <section id="about-testimonials" class="padding-vertically-3">
+
+        <div class="">
+
+            <h2>Guest Testimonials</h2>
+
+            <div class="testimonial">
+                <img src="./images/dude.jpeg" alt="Guest testimonial">
+                <p class="primary-background">
+                    "All women" are like this in the same way that "all men only care about getting laid." The problem is that men are being told by everyone from their mothers to their razorblade
+                    company that this is wrong, whereas women are told that whatever they "choose" is fine by virtue of the fact that it was a choice.
+                    OP's story is a microcosm of gender dynamics in the west right now.
+                    Men should think about how their actions may hurt women, and women should think about how their actions may help themselves.
+                </p>
+            </div>
+
+            <div class="testimonial">
+                <img src="./images/chick.jpeg" alt="Guest testimonial">
+                <p class="primary-background">
+                    It depends. How did you delete them? Some photo apps and file managers have options where you can choose whether to DELETE delete files, or send them to a recycle bin first.
+                    Also, are you sure these photos weren't backed up, like on Google? Do you have anything else, such as Dropbox or Amazon Photos, that may have been automatically uploading them?
+
+                </p>
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+    <footer id="home-footer">
+
+        <p>Hotel &copy; 2019 All Rights Reserved</p>
+
+    </footer>
+
 
 </body>
 </html>
