--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Hotel Site - you're welcome!">
     <meta name="keywords" content="hotel, city, stay, accommodation, lodging">
+    <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
     <title>Hotel Site | Welcome</title>
 </head>
@@ -62,9 +63,8 @@
                 I was once in a group and this chick enters and starts talking LOUDLY on discord and dudes all drool over her. She then proceeds to say "oh haha yeah I am probably the only REAL female who games"
                 and everyone agreed with her. And I'm sitting there, staring at my boobs thinking "shit, that means I'm a dude. Who woulda thunk it". And I'm sure people are gonna say I'm jealous.
                 Hell no, I like my individuality. I very rarely use voice chat. I went a year in my WOW guild with people thinking I'm a guy because all my usernames or character names are gender neutral
-                AND I DON'T ACT LIKE A HORNY SCHOOL GIRL WHO JUST GOT HER FIRST DILDO. Dude, just act fucking normal. You're not special and you're just coming off as annoying, Put your tits away and play the game. And guys who find that attractive, y'all need to get laid or some shit.
+                AND I DON'T ACT LIKE A HORNY SCHOOL GIRL WHO JUST GOT HER FIRST DILDO.
 
-                NOTE: I am not saying ALL GIRLS WHO GAME suck. I'm referring to the basic bitch ones.
             </p>
 
             <a href="about.html" class="button button-light">LEARN MORE</a>
@@ -72,6 +72,45 @@
         </div>
 
     </section>
+
+    <section id="features">
+
+        <div class="box primary-background">
+            <i class="fas fa-mountain fa-3x"></i>
+            <h3>Awesome Location</h3>
+            <p>I have a cable Type C to HDMI which works great for my TV from my phone, but I want to also charge it, is there a cable that is Type C
+                to Two Type C holes?
+            </p>
+        </div>
+
+        <div class="box dark-background">
+            <i class="fas fa-utensils fa-3x"></i>
+            <h3>Free Food</h3>
+            <p>That's awful. It's bad enough they deal with long hours on the road, now they have to deal with fucking insurance scammers like this?
+                People could die!
+            </p>
+        </div>
+
+        <div class="box light-background">
+            <i class="fas fa-dumbbell fa-3x"></i>
+            <h3>Gym</h3>
+            <p>It took a toll on me, I performed bad at my work and I was distant from my family, I was crushed and I hoped she would come back and that we would cry together,
+                agree it was a mistake and move on.
+            </p>
+        </div>
+
+    </section>
+
+    <div class="clearance">
+
+    </div>
+
+    <footer id="home-footer">
+
+        <p>Hotel &copy; 2019 All Rights Reserved</p>
+
+    </footer>
+
 
 </body>
 </html>
