--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,77 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
+    <meta name="description" content="Hotel Site - you're welcome!">
+    <meta name="keywords" content="hotel, city, stay, accommodation, lodging">
+    <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Hotel Site | Contact</title>
 </head>
 <body>
+
+
+    <header>
+
+        <nav>
+
+            <div class="container">
+                <h1 id="logo"><a href="index.html" class="logo">Hotel</a></h1>
+
+                <ul>
+                    <li><a href="index.html" class="nav-links">Home</a></li>
+                    <li><a href="about.html" class="nav-links">About</a></li>
+                    <li><a href="contact.html" class="nav-links current">Contact</a></li>
+                </ul>
+            </div>
+
+        </nav>
+
+    </header>
+
+    <section id="contact-form" class="padding-vertically-3">
+
+        <div class="container">
+
+            <h1>Contact <span class="text-primary">Us</span></h1>
+
+            <p>Fill Out the Form Below to Contact Us</p>
+
+            <form>
+
+                <div class="form-group">
+                    <label for="fullname">Full name</label>
+                    <input id="fullname" name="fullname">
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email">
+                </div>
+
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message"></textarea>
+                </div>
+
+                <button type="submit" id="submit" class="button">Submit</button>
+
+            </form>
+
+        </div>
+
+    </section>
+
+
+
+
+    <footer id="home-footer">
+
+        <p>Hotel &copy; 2019 All Rights Reserved</p>
+
+    </footer>
+
 
 </body>
 </html>
