Contact page is done

--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,34 @@
 
     </section>
 
+    <section id="contact-info" class="dark-background">
+
+        <div class="container">
+
+            <div class="box primary-background">
+                <i class="fas fa-hotel fa-3x"></i>
+                <h3>Location</h3>
+                <p>27 Hotel Road, City, Province, Country</p>
+            </div>
+
+            <div class="box dark-background">
+                <i class="fas fa-phone fa-3x"></i>
+                <h3>Phone</h3>
+                <p>+73 823 834 9239</p>
+            </div>
+
+            <div class="box light-background">
+                <i class="fas fa-envelope fa-3x"></i>
+                <h3>Email</h3>
+                <p>reception@hotelsite.com</p>
+            </div>
+
+        </div>
+
+
+
+    </section>
+
 
 
 
