added styles for mobile devices

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Hotel Site - you're welcome!">
     <meta name="keywords" content="hotel, city, stay, accommodation, lodging">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/mobile.css" rel="stylesheet" media="screen and (max-width: 768px)">
     <title>Hotel Site | About</title>
 </head>
 <body>
