--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="hotel, city, stay, accommodation, lodging">
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/mobile.css" rel="stylesheet" media="screen and (max-width: 768px)">
     <title>Hotel Site | Contact</title>
 </head>
 <body>
